Update module 4: Weight Initialization part 2

--- a/dnn_pytorch/module4/1_dnns.ipynb
+++ b/dnn_pytorch/module4/1_dnns.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks for digit recognition\n",
+    "# 1 Deep Neural networks - Part 1: digit recognition\n",
     "<p>We'll implement a Deep Neural network.</p>\n",
     "\n",
     "At this point, we can play:\n",
