Update module4 - Momentum

--- a/dnn_pytorch/module4/3_dropout.ipynb
+++ b/dnn_pytorch/module4/3_dropout.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Dropout\n",
+    "# 3. Deep Neural networks - Dropout\n",
     "<p>We'll implement dropout within a Deep Neural network.</p>\n",
     "\n",
     "<ul>\n",
