--- a/dnn_pytorch/module4/4_dropout_overfitting.ipynb
+++ b/dnn_pytorch/module4/4_dropout_overfitting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Dropout\n",
+    "# 4. Deep Neural networks - Dropout\n",
     "<p>We'll explore how adding dropout to a model support  overfitting reduction.</p>\n",
     "\n",
     "<ul>\n",
