--- a/dnn_pytorch/module4/5_initialization.ipynb
+++ b/dnn_pytorch/module4/5_initialization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Initialization\n",
+    "# 5. Deep Neural networks - Initialization\n",
     "<p>We'll explore how initialization techniques help avoid vanishing or exploding gradients.</p>\n",
     "\n",
     "<ul>\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
