--- a/dnn_pytorch/module4/6_initialization_techniques.ipynb
+++ b/dnn_pytorch/module4/6_initialization_techniques.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Initialization Techniques: Xavier\n",
+    "# 6. Deep Neural networks - Initialization Techniques: Xavier\n",
     "<p>We'll explore how initialization techniques help avoid vanishing or exploding gradients.</p>\n",
     "Test Uniform, Default and Xavier Initialization.\n",
     "\n",
