--- a/dnn_pytorch/module4/2_dnns.ipynb
+++ b/dnn_pytorch/module4/2_dnns.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Part 2: Decision regions\n",
+    "# 2. Deep Neural networks - Part 2: Decision regions\n",
     "<p>We'll implement a Deep Neural network.</p>\n",
     "\n",
     "<ul>\n",
