--- a/dnn_pytorch/module4/7_initialization_techniques2.ipynb
+++ b/dnn_pytorch/module4/7_initialization_techniques2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Deep Neural networks - Initialization Techniques: He\n",
+    "# 7. Deep Neural networks - Initialization Techniques: He\n",
     "<p>We'll explore how initialization techniques help avoid vanishing or exploding gradients.</p>\n",
     "Test Uniform, Default and Xavier Initialization.\n",
     "\n",
