Update module6: Applications of CNN

--- a/dnn_pytorch/module4/5_initialization.ipynb
+++ b/dnn_pytorch/module4/5_initialization.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "# train the model usein\n",
+    "# train the model\n",
     "cost_cross = train(Y, X, model, optimizer, criterion_cross, epochs=1000)\n",
     "# Observe along visualization steps, how activation doesn't change. \n",
     "# It will be verified at the end, that the weights have changed,\n",
@@ -618,13 +618,6 @@
     "plt.xlabel('epoch')\n",
     "plt.title('MSE loss ')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
