--- a/coding_interviews/coding_exercises.ipynb
+++ b/coding_interviews/coding_exercises.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercises for live coding interviews\n",
+    "\n",
+    "You can find multiple sources for coding practice exercises. \n",
+    "\n",
+    "References:\n",
+    "- \"Cracking the coding interview\", 5th Edition, G. Laakmann"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## w.1 Top web users\n",
     "You are given a log of website visits represented as a list of tuples:\n",
     "(user_id: int, visit_duration: int).\n",
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -312,10 +324,234 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## HR: Compute ratios in array\n",
+    "Given an array of integers, calculate the ratios of its elements that are positive, negative, and zero. Print the decimal value of each fraction on a new line with  places after the decimal.\n",
+    "\n",
+    "Note: This challenge introduces precision problems. The test cases are scaled to six decimal places, though answers with absolute error of up to  are acceptable.\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "There are  elements, two positive, two negative and one zero. Their ratios are ,  and . Results are printed as:\n",
+    "\n",
+    "0.400000\n",
+    "0.400000\n",
+    "0.200000\n",
+    "Function Description\n",
+    "\n",
+    "Complete the plusMinus function in the editor below.\n",
+    "\n",
+    "plusMinus has the following parameter(s):\n",
+    "\n",
+    "int arr[n]: an array of integers\n",
+    "Print\n",
+    "Print the ratios of positive, negative and zero values in the array. Each value should be printed on a separate line with  digits after the decimal. The function should not return a value.\n",
+    "\n",
+    "Input Format\n",
+    "\n",
+    "The first line contains an integer, , the size of the array.\n",
+    "The second line contains  space-separated integers that describe .\n",
+    "\n",
+    "Constraints\n",
+    "\n",
+    "\n",
+    "\n",
+    "Output Format\n",
+    "\n",
+    "Print the following  lines, each to  decimals:\n",
+    "\n",
+    "proportion of positive values\n",
+    "proportion of negative values\n",
+    "proportion of zeros\n",
+    "Sample Input\n",
+    "\n",
+    "STDIN           Function\n",
+    "-----           --------\n",
+    "6               arr[] size n = 6\n",
+    "-4 3 -9 0 4 1   arr = [-4, 3, -9, 0, 4, 1]\n",
+    "Sample Output\n",
+    "\n",
+    "0.500000\n",
+    "0.333333\n",
+    "0.166667\n",
+    "Explanation\n",
+    "\n",
+    "There are  positive numbers,  negative numbers, and  zero in the array.\n",
+    "The proportions of occurrence are positive: , negative:  and zeros: .\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4, 3, -9, 0, 4, 1]\n",
+      "0.500000\n",
+      "0.333333\n",
+      "0.166667\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'plusMinus' function below.\n",
+    "#\n",
+    "# The function accepts INTEGER_ARRAY arr as parameter.\n",
+    "#\n",
+    "\n",
+    "def plusMinus(arr):\n",
+    "    \"\"\"\n",
+    "    Print ratios of positive, negative and zero elements in the array.\n",
+    "    \"\"\"\n",
+    "    # keep counter of P, N, Z elements\n",
+    "    counters = {0:0, 1:0, -1:0}\n",
+    "    # run through the array and update counters\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    for i in arr:  # O(n)\n",
+    "        if i == 0:\n",
+    "            counters[0] += 1\n",
+    "        elif i >0:\n",
+    "            counters[1] += 1\n",
+    "        else:\n",
+    "            counters[-1] += 1\n",
+    "    \n",
+    "    # compute ratios (e/counter / len(array))\n",
+    "    # display with decimals\n",
+    "    for key in [1,-1,0]:\n",
+    "        print(f'{counters[key]/n:.6f}')  # display with 6 decimals\n",
+    "\n",
+    "\n",
+    "arr =  [-4, 3, -9, 0, 4, 1]\n",
+    "print(arr)\n",
+    "plusMinus(arr)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HR Time Conversion\n",
+    "Given a time in -hour AM/PM format, convert it to military (24-hour) time.\n",
+    "\n",
+    "Note: - 12:00:00AM on a 12-hour clock is 00:00:00 on a 24-hour clock.\n",
+    "- 12:00:00PM on a 12-hour clock is 12:00:00 on a 24-hour clock.\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "\n",
+    "Return '12:01:00'.\n",
+    "\n",
+    "\n",
+    "Return '00:01:00'.\n",
+    "\n",
+    "Function Description\n",
+    "\n",
+    "Complete the timeConversion function in the editor below. It should return a new string representing the input time in 24 hour format.\n",
+    "\n",
+    "timeConversion has the following parameter(s):\n",
+    "\n",
+    "string s: a time in  hour format\n",
+    "Returns\n",
+    "\n",
+    "string: the time in  hour format\n",
+    "Input Format\n",
+    "\n",
+    "A single string  that represents a time in -hour clock format (i.e.:  or ).\n",
+    "\n",
+    "Constraints\n",
+    "\n",
+    "All input times are valid\n",
+    "Sample Input\n",
+    "\n",
+    "07:05:45PM\n",
+    "Sample Output\n",
+    "\n",
+    "19:05:45\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'19:05:45'"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'timeConversion' function below.\n",
+    "#\n",
+    "# The function is expected to return a STRING.\n",
+    "# The function accepts STRING s as parameter.\n",
+    "#\n",
+    "\n",
+    "def timeConversion(s):\n",
+    "    \"\"\"\n",
+    "    Convert 12h AM/PM time into 24-hour military-time.\n",
+    "    No validation on input required.\n",
+    "    Input format: hh:mm:ssXX\n",
+    "    \"\"\"\n",
+    "    military_time = \"\"\n",
+    "    \n",
+    "    # extract 12-hours, minutes, seconds, TF=XX\n",
+    "    hh, mm, ssTF = s.split(':')\n",
+    "    if hh == \"12\":\n",
+    "        hh = \"00\"\n",
+    "    ss = ssTF[0:2]\n",
+    "    tf = ssTF[2:]\n",
+    "    \n",
+    "    # convert hours to 24format (h, TF)\n",
+    "    # 12+AM > 00, 01+AM > 01, 11AM > 11  (+0)\n",
+    "    # 12+PM > 12, 01+PM > 13, 11PM > 23  (+12)\n",
+    "    if tf == \"PM\":\n",
+    "        hh = str(int(hh) + 12)\n",
+    "    \n",
+    "    \n",
+    "    # merge h/m/s into military_time\n",
+    "    #military_time = hh + ':' + mm + ':' ss\n",
+    "    military_time = ':'.join([hh,mm,ss])\n",
+    "    return military_time\n",
+    "\n",
+    "\n",
+    "timeConversion('07:05:45PM')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
