Updating practice resources: coding exercises

--- a/coding_interviews/coding_exercises.ipynb
+++ b/coding_interviews/coding_exercises.ipynb
@@ -9,7 +9,8 @@
     "You can find multiple sources for coding practice exercises. \n",
     "\n",
     "References:\n",
-    "- \"Cracking the coding interview\", 5th Edition, G. Laakmann"
+    "- \"Cracking the coding interview\", 5th Edition, G. Laakmann\n",
+    "- <a href=\"HackerRank.com\">HackerRank.com</a>"
    ]
   },
   {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HR: Compute ratios in array\n",
+    "## [HR] Compute ratios in array\n",
     "Given an array of integers, calculate the ratios of its elements that are positive, negative, and zero. Print the decimal value of each fraction on a new line with  places after the decimal.\n",
     "\n",
     "Note: This challenge introduces precision problems. The test cases are scaled to six decimal places, though answers with absolute error of up to  are acceptable.\n",
@@ -447,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HR Time Conversion\n",
+    "## [HR] Time Conversion\n",
     "Given a time in -hour AM/PM format, convert it to military (24-hour) time.\n",
     "\n",
     "Note: - 12:00:00AM on a 12-hour clock is 00:00:00 on a 24-hour clock.\n",
