Updating coding interviews module

--- a/coding_interviews/coding_exercises.ipynb
+++ b/coding_interviews/coding_exercises.ipynb
@@ -4,9 +4,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Reviewing: Dynamic Programming flavours\n",
+    "\n",
+    "Example: Fibonacci sequence: 0, 1, 1, 2, 3, ... fib(n-1) + fib(n-2)\n",
+    "\n",
+    "Implementations:\n",
+    "\n",
+    "- Recursive backtracking\n",
+    "  - Naive recursive / high time-complexity\n",
+    "\n",
+    "- DP Memoization (requires recursion)\n",
+    "  - Suitable for complex-problems with fewer-subproblems\n",
+    "\n",
+    "- DP Tabulation (store results in a tmp structure: table)\n",
+    "  - Suitable for simpler-problems with large-subproblems\n",
+    "\n",
+    "- DP Tabulation No-Memory (store only values needed for following computations: no-mem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Dynamic Programming (DP) implementations\n",
+    "\n",
+    "# Recursive backtracking - tC = O(2^n) -------\n",
+    "# Establish base cases and the recursion\n",
+    "# Will incur in repetition of calculation for n values\n",
+    "def fibonacci_backtracking(n):\n",
+    "    if n ==0: return 0\n",
+    "    if n == 1: return 1\n",
+    "    return fib(n-1) + fib(n-2)  # 2 calculations each time\n",
+    "# Complexity: 2 x 2 x 2 ... = 2^n\n",
+    "\n",
+    "\n",
+    "# Memorization (Top-Down: DP) - tC=O(n), sC=O(n) -------\n",
+    "# Utilizes recursion and keeps results in a cache\n",
+    "# Each calculation is made only once\n",
+    "# Top-Down: Start from the bigger problem, and then work on the smaller problems\n",
+    "def fibonacci_memoization(n):\n",
+    "    cache_memory = {0:0, 1:1}\n",
+    "    \n",
+    "    def f(n):\n",
+    "        if n in memo:\n",
+    "            return memo[n]\n",
+    "        cache_memory[n] = f(n-1) + f(n-2)\n",
+    "        return cache_memory[n]\n",
+    "    return f(n)\n",
+    "\n",
+    "\n",
+    "# Tabulation (Bottom-up DP) tC=O(n), sC=O(n)-------\n",
+    "# All subproblems are solved first, from bottom until n\n",
+    "# Set cache_results with base cases and then updates\n",
+    "def fibonacci(n):\n",
+    "    cache_results =  {}\n",
+    "    cache_results[0] = 0\n",
+    "    cache_results[1] = 1\n",
+    "    \n",
+    "    # calculate missing cases\n",
+    "    for i in range(2, n+1):\n",
+    "        cache_results[i] = cache_results[i-1] + cache_results[i-2]\n",
+    "        \n",
+    "    return cache_results[n]\n",
+    "    \n",
+    "    \n",
+    "# Bottom-up No-Memory DP - tC=O(n), sC=O(1)!!!\n",
+    "def fibonacci_nomemory(n):\n",
+    "    if n<2: return n  # base cases\n",
+    "    \n",
+    "    # Instead of n sized memory, use only 2 needed values\n",
+    "    # Start from 1\n",
+    "    previous, current = 0, 1\n",
+    "    # Loop until n\n",
+    "    for i in range(2, n+1):\n",
+    "        previous, current = current, current+previous\n",
+    "    \n",
+    "    return current\n",
+    "\n",
+    "fibonacci(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercises for live coding interviews\n",
     "\n",
     "You can find multiple sources for coding practice exercises. \n",
+    "\n",
+    "Labels:\n",
+    "- w: Web\n",
+    "- B: Book in the references\n",
+    "- HR: Hackerrank\n",
     "\n",
     "References:\n",
     "- \"Cracking the coding interview\", 5th Edition, G. Laakmann\n",
@@ -87,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Arrays and Strings: Unique characters\n",
+    "## [B] 1.1 Arrays and Strings: Unique characters\n",
     "Implement an algorithm to determine if a string has all unique characters. \n",
     "What if you cannot use additional data structures?\n",
     "\n",
@@ -148,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Arrays and Strings: Reverse\n",
+    "## [B] 1.2 Arrays and Strings: Reverse\n",
     "Implement an algorithm to reverse a string."
    ]
   },
@@ -208,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3 Arrays and Strings: Is permutation\n",
+    "## [B] 1.3 Arrays and Strings: Is permutation\n",
     "Implement an algorithm to check if a string is a permutation of another one."
    ]
   },
@@ -268,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.7 Arrays and Strings: Matrix zeros\n",
+    "## [B] 1.7 Arrays and Strings: Matrix zeros\n",
     "Implement an algorithm such that if an element in an MxN matris is 0, \n",
     "its entire row and column are set to 0.\n",
     "\n",
@@ -876,7 +977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Youtube] Selecting best place to move\n",
+    "## [Youtube] Selecting best place to move\n",
     "You want to move to another apartment in a nearby block. \n",
     "\n",
     "Your selection criteria: An apt is good if it's close to another personal valuable location (e.g., gym)\n",
@@ -1255,6 +1356,371 @@
     "\n",
     "#Input: 9875 4, Expected output=8"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [HR] Electric Bike Tour\n",
+    "Suppose there is a circular bike lane enabled for electric bikes. There are N charging stations on that lane. Stations are numbered 0 to N-1. \n",
+    "You have two pieces of information corresponding to each of the stations: (1) the amount of electricity the station will provide, and (2) the distance from that station to the next one.\n",
+    "Initially, you have a storage 'tank' of infinite capacity not charged. \n",
+    "You can start the tour at any of the stations. \n",
+    "Calculate the first point from where the bike will be able to complete the tour around the lane. Consider that the bike will stop at each of the stations. The bike will move one meter for each electricity unit. \n",
+    "\n",
+    "Input Format\n",
+    "N = integer\n",
+    "stations = list of tuples\n",
+    "\n",
+    "Constraints:\n",
+    "1 <= N <= 10^5\n",
+    "1 <= electricity units, distance <= 10^9\n",
+    "\n",
+    "Output Format\n",
+    "An integer which will be the smallest index of the station from which we can start the tour.\n",
+    "\n",
+    "Example\n",
+    "N = 3\n",
+    "stations = [ [1,5], [10,3], [3,4]]\n",
+    "output = 1\n",
+    "We can start the tour from the second station."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exploring start from idx: 0, tank: 0\n",
+      "  current_idx: 0\n",
+      "  Not enough fuel\n",
+      "Exploring start from idx: 1, tank: 0\n",
+      "  current_idx: 1\n",
+      "  New tank: 7\n",
+      "  current_idx: 2\n",
+      "  New tank: 6\n",
+      "  current_idx: 0\n",
+      "  ** Completed circle\n",
+      "First starting pump: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "# Input simulation\n",
+    "import io\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "#\n",
+    "# Complete the 'truckTour' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER.\n",
+    "# The function accepts 2D_INTEGER_ARRAY stations as parameter.\n",
+    "#\n",
+    "# N pumps (0..N-1)\n",
+    "# n: [AmountElectricity units, DistanceToNextStation km]\n",
+    "# Tank inf, start=0\n",
+    "# Tour: \n",
+    "#  - start=*\n",
+    "#  - calculate 1stPoint complete circle\n",
+    "# Stop at e/station, Move 1km/litre\n",
+    "# Return: [int] Start index: smallest index of station\n",
+    "\n",
+    "# - Go through e/index (station), verify if i can complete-tour\n",
+    "#   - if check-if-complete(idx) -> return index  // Smaller - First found\n",
+    "#   - go to next index and repeat check-if-complete(idx)\n",
+    "#   - return False?\n",
+    "#\n",
+    "#- check-if-complete(start_idx):  # Can i complete a tour from idx?\n",
+    "#   - tour-start: start_idx (track start of tour)\n",
+    "#   - tank: 0\n",
+    "#   - at e/node (current-idx), \n",
+    "#       if tank+extra_power (tank+liters) < distance-next, return False\n",
+    "#       if current-idx == tour-start, return True\n",
+    "#       if tank+extra_power (tank+liters) >= distance-next, update tank & increase idx\n",
+    "# \n",
+    "# stations = [ [a,d] ]\n",
+    "# \n",
+    "\n",
+    "def is_complete(stations, start_idx: int):\n",
+    "    \"\"\"\n",
+    "    Check if a tour can be completed from a specified start index.\n",
+    "    \"\"\"\n",
+    "    tank = 0\n",
+    "    visited_stations = 0\n",
+    "    print(f'Exploring start from idx: {start_idx}, tank: {tank}')\n",
+    "    for idx in range(start_idx, start_idx + len(stations)):\n",
+    "        current_idx = idx % len(stations)\n",
+    "        print(f'  current_idx: {current_idx}')\n",
+    "        \n",
+    "        extra_power = stations[current_idx][0]\n",
+    "        distance_to_next = stations[current_idx][1]\n",
+    "        \n",
+    "        if visited_stations == len(stations)-1:\n",
+    "            print('  ** Completed circle')\n",
+    "            return True\n",
+    "        elif tank+extra_power < distance_to_next:\n",
+    "            print('  Not enough power')\n",
+    "            return False\n",
+    "        elif tank+extra_power >= distance_to_next:\n",
+    "            tank += extra_power - distance_to_next\n",
+    "            visited_stations += 1\n",
+    "            print(f'  New tank: {tank}')\n",
+    "        \n",
+    "\n",
+    "def foodTruckCycle(stations):\n",
+    "    \"\"\"\n",
+    "    Verify at which index a tour can be completed.\n",
+    "    \"\"\"\n",
+    "    for idx in range(len(stations)):\n",
+    "        if is_complete(stations, idx):\n",
+    "            return idx\n",
+    "    return -1\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # test_input = '''3\n",
+    "    # 1 5\n",
+    "    # 10 3\n",
+    "    # 3 4\n",
+    "    # '''\n",
+    "    # sys.stdin = io.StringIO(test_input)\n",
+    "    # fptr = open('/home/cristina/work/mine/coursera/ai_ml_study_resources/logs', 'w')\n",
+    "    # fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    # n = int(input().strip())\n",
+    "    # stations = [[26808, 67939], [46593, 11185], [63312, 39183], [44970, 1973]]\n",
+    "    stations = [ [1,5], [10,3], [3,4]]\n",
+    "    n = len(stations)\n",
+    "\n",
+    "    # stations = []\n",
+    "    # for _ in range(n):\n",
+    "    #     stations.append(list(map(int, input().rstrip().split())))\n",
+    "    # print(f'stations: {stations}')\n",
+    "    result = foodTruckCycle(stations)\n",
+    "    print(f'First starting station: {result+1}')\n",
+    "    # fptr.write(str(result) + '\\n')\n",
+    "    # fptr.close()\n",
+    "    \n",
+    "    \n",
+    "# Issues:\n",
+    "# Points get multiple times evaluated (after index reaches end of list, it starts checking from 0, which were prev. checked!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start_index: 0\n",
+      "i: 0\n",
+      "  current_power -2, total_power 1, total_distance 3, start_index: 0\n",
+      "  Not enough power\n",
+      "i: 1\n",
+      "  current_power -1, total_power 3, total_distance 6, start_index: 1\n",
+      "  Not enough power\n",
+      "i: 2\n",
+      "  current_power 7, total_power 13, total_distance 9, start_index: 2\n",
+      "i: 3\n",
+      "  current_power 6, total_power 16, total_distance 13, start_index: 2\n",
+      "Searched the entire set\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimized version\n",
+    "# Different logic\n",
+    "# - Every index in the list is a candidate of valid Starting Point (complete tour)\n",
+    "# - We'll check every index in the list, index BUT\n",
+    "# - We'll keep track of total electric_units and distance in the list\n",
+    "#   - if total distance is larger than total electric units, RETURN -1 (Not possible to find a solution)\n",
+    "# - At each index in the list, accumulate totals, but also check, current_power_units += index_power_units - distance\n",
+    "#   - If not enough, then increase Starting Point index\n",
+    "# \n",
+    "def foodTruckCycle(stations):\n",
+    "    N = len(stations)\n",
+    "    \n",
+    "    total_power = 0\n",
+    "    total_distance = 0\n",
+    "    current_power = 0\n",
+    "    start_index = 0\n",
+    "\n",
+    "    print(f'start_index: {start_index}')\n",
+    "    for i in range(N):\n",
+    "        print(f'i: {i}')\n",
+    "        power, distance = stations[i]\n",
+    "        total_power += power\n",
+    "        total_distance += distance\n",
+    "        current_power += power - distance\n",
+    "        print(f'  current_power {current_power}, total_power {total_power}, total_distance {total_distance}, start_index: {start_index}')\n",
+    "\n",
+    "        # If current power is negative, this can't be the starting point\n",
+    "        if current_power < 0:\n",
+    "            print('  Not enough power')\n",
+    "            start_index = i + 1\n",
+    "            current_power = 0\n",
+    "\n",
+    "\n",
+    "    # After whole list has been checked - Verify case 1: No solution\n",
+    "    if total_power < total_distance:\n",
+    "        print(f'  Impossible case: totP={total_power}, totD={total_distance}')\n",
+    "        return -1  # No solution\n",
+    "    \n",
+    "    # Searched the entire set\n",
+    "    print('Searched the entire set')\n",
+    "    return start_index\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    stations = [ [1, 3], [2, 3], [10, 3], [3, 4] ]\n",
+    "    print(foodTruckCycle(stations))  # Output: 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [B] 9.1 Staircase steps\n",
+    "A child is running up a staircase with n steps.\n",
+    "She can hop either 1 step, 2 steps, or 3 steps at a time.\n",
+    "\n",
+    "How many possible ways can the child run up the stairs?\n",
+    "\n",
+    "**Reasoning**\n",
+    "Think of getting to step `n`\n",
+    "You can only get there:\n",
+    "- from `n-1` plus `1` step\n",
+    "- from `n-2` plus `2` steps\n",
+    "- from `n-3` plus `3` steps\n",
+    "\n",
+    "The total amount of possible ways to get there is the sum of the `3 possible cases`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current_result: 1\n",
+      "current_result: 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Naive recursive backtracking approach\n",
+    "def count_ways(n: int):   # O(3^n)\n",
+    "    \"\"\"\n",
+    "    Count in how many ways can the child climb up the stairs of lenght n.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "    elif n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        current_result = count_ways(n-1) + count_ways(n-2) + count_ways(n-3)\n",
+    "        print(f'current_result: {current_result}')\n",
+    "        return current_result\n",
+    "    \n",
+    "count_ways(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cached_ways: {-3: 0, -2: 0, -1: 0, 0: 1}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DP Memoization  #O(n)\n",
+    "\n",
+    "def count_ways(n: int):\n",
+    "    \"\"\"\n",
+    "    Count in how many ways can the child climb up the stairs of lenght n.\n",
+    "    \"\"\"\n",
+    "    cached_ways = {}\n",
+    "    cached_ways[-3] = 0\n",
+    "    cached_ways[-2] = 0\n",
+    "    cached_ways[-1] = 0\n",
+    "    cached_ways[0] = 1\n",
+    "    \n",
+    "    if n <= 0:\n",
+    "        return cache_ways[n]\n",
+    "    \n",
+    "    print(f'cached_ways: {cached_ways}')\n",
+    "    for i in range(1, n+1):\n",
+    "        a = i-1\n",
+    "        b = i-2\n",
+    "        c = i-3\n",
+    "        cached_ways[i] = (cached_ways[a] + cached_ways[b] + + cached_ways[c])\n",
+    "        # print(f'  cached ways[{i}]: {cached_ways[i]}')\n",
+    "    return (cached_ways[n])\n",
+    "    \n",
+    "count_ways(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
