Updating coding interviews module

--- a/coding_interviews/coding_exercises.ipynb
+++ b/coding_interviews/coding_exercises.ipynb
@@ -100,6 +100,153 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Reviewing: Prefix Sums\n",
+    "\n",
+    "Typical in problems where we want to obtain the sum of a subset of elements.\n",
+    "\n",
+    "`A = [a0, a1, a2, ..., aN-1]`  // N elements\n",
+    "\n",
+    "**prefSum(n)** = sum of n elements\n",
+    "`prefSum = [0 .....  prefSumN] // N+1 elements`\n",
+    "\n",
+    "\n",
+    "\n",
+    "`prefSum(0) = 0` // Sum of 0 elements\n",
+    "\n",
+    "`prefSum(i) = prefSum(i-1) + A[i-1]` // Sum of i elements, A[i-1] at index i-1\n",
+    "\n",
+    "We can easily get Sum of a subset between prefIndex X until Y:\n",
+    "\n",
+    "`prefSum(L,R) = prefSum(R+1) - prefSum(L)`  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "- Works well for Range sum, XOR, product without 0s, frequency counts (sum of 1s)\n",
+    "- Static (no updates). -> PrefSum is applied once, then we answer a query\n",
+    "- but not for max/min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1: Sum a range of values from a set of queries (boundaries)\n",
+    "n, q = [int(e) for e in input().split()]\n",
+    "x = [int(e) for e in input().split()]  # 0-based\n",
+    "pref = [0] * (n+1) # 1-based\n",
+    "for i in range(n):\n",
+    "    pref[i+1] = pref[i] + x[i]\n",
+    "\n",
+    "for i in range(q):\n",
+    "    a, b = [int(e) for e in input().split()]\n",
+    "    print(pref[b] - pref[a-1])\n",
+    "# e.g.\n",
+    "# input:\n",
+    "# 4 1\n",
+    "# 2 4 6 8\n",
+    "# 1 3\n",
+    "# Output: 12\n",
+    "# O(n+q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: Character frequency within a string\n",
+    "# Given a string S of length N, \n",
+    "# given L and R, \n",
+    "# find the most common character in the substring S[L..R]\n",
+    "# N, Q <= 100.000\n",
+    "# alphabet = lowercase EN characters\n",
+    "S = 'abcccabaaabb'\n",
+    "# Here sums come from the frequency of characters, per e/26 letter\n",
+    "s = input()\n",
+    "n = len(s)\n",
+    "pref = {}  #empty dictionary (slow)\n",
+    "# pref['a'][5] will contain the sum/freq of 'a' in the first 5 letters i=0..4\n",
+    "import string\n",
+    "for char in string.ascii_lowercase:\n",
+    "    tmp = [0] * (n+1)  # temporary array\n",
+    "    for i in range(n):\n",
+    "        if s[i] == char:\n",
+    "            tmp[i+1] = 1\n",
+    "    # run prefix sums\n",
+    "    for i in range(n):\n",
+    "        tmp[i+1] += tmp[i]\n",
+    "    pref[char] = tmp\n",
+    "    \n",
+    "# Read queries/ boundaries\n",
+    "q = int(input())\n",
+    "for i in range(q):\n",
+    "    L, R = [int(e) for e in input().split()]\n",
+    "    answer = [0, 'a']\n",
+    "    for char in string.ascii_lowercase:\n",
+    "        freq = pref[char][R+1] - pref[char][L]\n",
+    "        if freq > answer[0]:\n",
+    "            answer = [freq, char]\n",
+    "    print(answer)\n",
+    "    \n",
+    "# e.g input, 1 query, boundaries 2-6\n",
+    "# abcccabaaabb\n",
+    "# 1\n",
+    "# 2 6\n",
+    "# Output: [3, c] freq, letter\n",
+    "\n",
+    "# O(preproc + queries)\n",
+    "# O(26*N  + Q*26)\n",
+    "# O(A*N  + Q*A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 3: Array manipulation\n",
+    "# You are given an array a[N] and Q updates.capitalizeEach update consists of 3 numbers: L, R, X(value)\n",
+    "# You need to increase all elements at indices L..R by +x\n",
+    "# Print the final sequence\n",
+    "# N,Q <=100.000\n",
+    "#\n",
+    "# pref = [0] * (N+1)\n",
+    "# per query:\n",
+    "#   pref[L] += x  // We add X and it propagates to subset L,R+1\n",
+    "#   pref[R+1] -= x  // We subtract so it stop previous addition at R+1\n",
+    "# per index:\n",
+    "#   pref[i] += pref[i-1]\n",
+    "# per index:\n",
+    "#   print(pref[i] + a[i])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercises for live coding interviews\n",
     "\n",
     "You can find multiple sources for coding practice exercises. \n",
@@ -1265,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,20 +1485,20 @@
     "    return int(superDigitRec(str(super_digit_n * k)))\n",
     "\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "# if __name__ == '__main__':\n",
+    "#     fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
     "\n",
-    "    first_multiple_input = input().rstrip().split()\n",
+    "#     first_multiple_input = input().rstrip().split()\n",
     "\n",
-    "    n = first_multiple_input[0]\n",
+    "#     n = first_multiple_input[0]\n",
     "\n",
-    "    k = int(first_multiple_input[1])\n",
+    "#     k = int(first_multiple_input[1])\n",
     "\n",
-    "    result = superDigit(n, k)\n",
+    "#     result = superDigit(n, k)\n",
     "\n",
-    "    fptr.write(str(result) + '\\n')\n",
+    "#     fptr.write(str(result) + '\\n')\n",
     "\n",
-    "    fptr.close()\n",
+    "#     fptr.close()\n",
     "\n",
     "\n",
     "#Input: 9875 4, Expected output=8"
@@ -1709,10 +1856,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [B] Robot\n",
+    "\n",
+    "Imagine a robot sitting on the upper left corner of an X and Y grid. \n",
+    "The robot can only move in 2 directions: right and down. \n",
+    "How many possible paths are there for the robot to go from (0,0) to (X,Y)?\n",
+    "Follow up:\n",
+    "Imagine certain spots are `off limits`; such that the robot cannot step on them.\n",
+    "Design an algorithm to find a path for the robot from the top left to the bottom right.\n",
+    "\n",
+    "**Review Combinatorics:**\n",
+    "\n",
+    "Combinations: Number of ways to choose `r` items from `n` when order doesn't matter.\n",
+    "```\n",
+    "C(n,r) = n! / r! (n-r)!\n",
+    "```\n",
+    "\n",
+    "Permutations: Number of ways to choose `r` items from `n` in which the order matters.\n",
+    "```\n",
+    "P(n,r) = n! / (n-r)!\n",
+    "```\n",
+    "\n",
+    "Common uses:\n",
+    "- Count how many ways we can arrange items\n",
+    "- Lottery probability\n",
+    "- Seating arrangements\n",
+    "\n",
+    "\n",
+    "**Number of Paths**\n",
+    "We can infer that each path will have a total length X+Y  = Xr + Yd  (r:right and d:down steps)\n",
+    "We want to count how many sequences of the moves exist.\n",
+    "Taking the combinations formula Paths(n,X) = n! / X! (n-X)!\n",
+    "`Paths(X,Y) = (X+Y)! / X! (X+Y - X)! = (X+Y)! / X! Y!`\n",
+    "\n",
+    "**Off-limits**\n",
+    "Start from the last point, which point could have led there?\n",
+    "Think of not counting movements if starting point is an off-limit point.\n",
+    "- P(x,y) = 0, if x,y is an obstacle\n",
+    "- P(x,y) = 1, if x,y is 0,0\n",
+    "- P(x,y) = P(x-1,y) + P(x, y-1), else\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left) 2, 3\n",
+      "Up  ) 1, 3\n",
+      "Left) 1, 2\n",
+      "Up  ) 0, 2\n",
+      "Up  ) 0, 1\n",
+      "Origin: 0,0\n",
+      "Path: [[0, 1], [0, 2], [1, 2], [1, 3], [2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid(x, y):\n",
+    "    \"\"\"\n",
+    "    Function to set the off-limit/blocked points\n",
+    "    \"\"\"\n",
+    "    BLOCKED = {(0,3): False}\n",
+    "    if (x,y) in BLOCKED:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "def find_path(x: int, y: int, path):\n",
+    "    # path = []\n",
+    "    if x == 0 and y == 0:\n",
+    "        print('Origin: 0,0')\n",
+    "        return True\n",
+    "    \n",
+    "    found_path = False\n",
+    "    if x>=1 and is_valid(x-1, y):\n",
+    "        print( f'Left) {x}, {y}')\n",
+    "        found_path = find_path(x-1, y, path)\n",
+    "    if not found_path and y >= 1 and is_valid(x, y-1):\n",
+    "        print( f'Up  ) {x}, {y}')\n",
+    "        found_path = find_path(x, y-1, path)\n",
+    "        \n",
+    "    if found_path:\n",
+    "        path.append([x,y])\n",
+    "    return path\n",
+    "    \n",
+    "path = find_path(2, 3, [])\n",
+    "print(f'Path: {path}')\n",
+    "\n",
+    "\n",
+    "#  Complexity (Assuming a constant is_valid operation)\n",
+    "# At each point, it tries:\n",
+    "# a) Move left → find_path(x-1, y)\n",
+    "# b) If that fails, try up → find_path(x, y-1)\n",
+    "# time complexity is O(2^x+y)\n",
+    "# Adding memory would reduce it to O(x*y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [HR] 2 Stacks\n",
+    "A queue is an abstract data type that maintains the order in which elements were added to it, allowing the oldest elements to be removed from the front and new elements to be added to the rear. This is called a First-In-First-Out (FIFO) data structure because the first element added to the queue (i.e., the one that has been waiting the longest) is always the first one to be removed.\n",
+    "\n",
+    "A basic queue has the following operations:\n",
+    "\n",
+    "Enqueue: add a new element to the end of the queue.\n",
+    "Dequeue: remove the element from the front of the queue and return it.\n",
+    "In this challenge, you must first implement a queue using two stacks. Then process  queries, where each query is one of the following  types:\n",
+    "\n",
+    "1 x: Enqueue element  into the end of the queue.\n",
+    "2: Dequeue the element at the front of the queue.\n",
+    "3: Print the element at the front of the queue.\n",
+    "Input Format\n",
+    "\n",
+    "The first line contains a single integer, , denoting the number of queries.\n",
+    "Each line  of the  subsequent lines contains a single query in the form described in the problem statement above. All three queries start with an integer denoting the query , but only query  is followed by an additional space-separated value, , denoting the value to be enqueued.\n",
+    "\n",
+    "Constraints\n",
+    "\n",
+    "It is guaranteed that a valid answer always exists for each query of type .\n",
+    "Output Format\n",
+    "\n",
+    "For each query of type , print the value of the element at the front of the queue on a new line.\n",
+    "\n",
+    "Sample Input\n",
+    "\n",
+    "STDIN   Function\n",
+    "-----   --------\n",
+    "10      q = 10 (number of queries)\n",
+    "1 42    1st query, enqueue 42\n",
+    "2       dequeue front element\n",
+    "1 14    enqueue 42\n",
+    "3       print the front element\n",
+    "1 28    enqueue 28\n",
+    "3       print the front element\n",
+    "1 60    enqueue 60\n",
+    "1 78    enqueue 78\n",
+    "2       dequeue front element\n",
+    "2       dequeue front element\n",
+    "Sample Output\n",
+    "\n",
+    "14\n",
+    "14\n",
+    "Explanation\n",
+    "\n",
+    "Perform the following sequence of actions:\n",
+    "\n",
+    "Enqueue ; .\n",
+    "Dequeue the value at the head of the queue, ; .\n",
+    "Enqueue ; .\n",
+    "Print the value at the head of the queue, ; .\n",
+    "Enqueue ; .\n",
+    "Print the value at the head of the queue, ; .\n",
+    "Enqueue ; .\n",
+    "Enqueue ; .\n",
+    "Dequeue the value at the head of the queue, ; .\n",
+    "Dequeue the value at the head of the queue, ; .\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Enter your code here. Read input from STDIN. Print output to STDOUT\n",
+    "# 2 stacks\n",
+    "# q queries: 1)enqueue (at end), 2)dequeue (front), 3) peek (front)\n",
+    "           \n",
+    "# def process_queries(queries):\n",
+    "# Read input:\n",
+    "num_queries = int(input())\n",
+    "queries = []\n",
+    "for i in range(num_queries):\n",
+    "    q = input()\n",
+    "    q1 = int(q.split(' ')[0])\n",
+    "    if q1 == 1:\n",
+    "        q2 = int(q.split(' ')[1])\n",
+    "        queries.append([q1, q2])\n",
+    "    else:\n",
+    "        queries.append(int(q))\n",
+    "# print(queries)\n",
+    "\n",
+    "# Process input queries:\n",
+    "stack_enqueue = []\n",
+    "stack_dequeue = []\n",
+    "\n",
+    "for query in queries:\n",
+    "    # print(f'query: {query}')\n",
+    "    if not type(query) == int:\n",
+    "        if query[0] == 1:\n",
+    "            # Enqueue\n",
+    "            stack_enqueue.append(query[1])\n",
+    "    else:\n",
+    "        if query == 2:\n",
+    "            # Dequeue\n",
+    "            if not stack_dequeue:\n",
+    "                while stack_enqueue:\n",
+    "                    value = stack_enqueue.pop()\n",
+    "                    stack_dequeue.append(value)\n",
+    "                    # print(value)\n",
+    "            stack_dequeue.pop()\n",
+    "        elif query == 3:\n",
+    "            # Peek/Front\n",
+    "            if not stack_dequeue:\n",
+    "                while stack_enqueue:\n",
+    "                    value = stack_enqueue.pop()\n",
+    "                    stack_dequeue.append(value)\n",
+    "                    # print(value)\n",
+    "            print(stack_dequeue[-1])\n",
+    "\n",
+    "# https://www.youtube.com/watch?v=eanwa3ht3YQ&t=1s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
